--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'mixin/layout';
 
 // layout
+@import 'layout/html';
 @import 'layout/body';
 @import 'layout/navbar';
 @import 'layout/header';
