--- a/assets/sass/component/attractions/_destinations.scss
+++ b/assets/sass/component/attractions/_destinations.scss
@@ -1,9 +1,9 @@
 .destinations{
-margin-top: 15vh;
+margin-top: $margin-extra-hue;
 
 &__items{
 	position: relative;
-	margin-bottom: $margin-hue;
+	margin-bottom: $margin-extra-hue;
 
 	img{
 		width: 100%;
@@ -22,7 +22,7 @@ margin-top: 15vh;
 		top:-10%;
 		width:$sub-title-area;
 		height: $sub-title-area;
-		border-radius: 50%;
+		border-radius: $border-radius-circle;
 		background-color: white;
 		box-shadow: 0px 0px 6px 1px $color-gray;
 		color:$color-accent-dark;
