--- a/assets/sass/component/events/_detal.scss
+++ b/assets/sass/component/events/_detal.scss
@@ -1,8 +1,8 @@
 .detal{
 	border-bottom: 2px solid $color-accent-blue;
 	&__title{
-		padding: 20px 0;
-		padding-left: 100px;
+		padding: $padding-base 0;
+		padding-left: $padding-middle-hue;
 		font-size: $font-title-footer-sub;
 		background-color: $color-accent-blue;
 		color:$color-white;
@@ -11,26 +11,25 @@
 		width: 100%;
 	}
 	&__info{
-		margin-top: 80px;
-		margin-bottom: 100px;
+		margin-top: $margin-small-hue;
+		margin-bottom: $margin-middle-hue;
 		color: $color-accent-dark;
 		text-align: justify;
 	}
 	&__date{
-		margin-bottom: 50px;
+		margin-bottom: $margin-base-hue;
 		color: $color-accent-dark;
 	}
 	&__back{
-		display: flex;
-		justify-content: flex-end;
-		margin-top: 20px;
+		@extend %flex-end;
+		margin-top: $margin-base;
 		font-size: $font-navbar;
 		&:hover{
 			a{
-				color:#3DA3FF;
+				color:$color-accent;
 			}
 			div{
-				background-color: #3DA3FF;
+				background-color: $color-accent;
 			}
 		}
 		a{
@@ -38,10 +37,10 @@
 		}
 		&__button{
 			position: relative;
-			margin-right: 10px;
-			width: 30px;
-			height: 30px;
-			border-radius: 50%;
+			margin-right: $margin-small;
+			width: $big;
+			height: $big;
+			border-radius: $border-radius-circle;
 			background-color: $color-accent-blue;
 			cursor: pointer;
 			&::before,&::after{
