--- a/assets/sass/component/food/_food-info.scss
+++ b/assets/sass/component/food/_food-info.scss
@@ -2,7 +2,7 @@
 	color:$color-accent-dark;
 	&__card-1{
 		position: relative;
-		margin: 40px 0;
+		margin: $margin-large 0;
 		img{
 			width: 50%;
 		}
@@ -13,25 +13,25 @@
 			background-color: $color-white;
 			bottom: 0;
 			right: 0;
-			padding: 30px;
-			border-radius: 30px;
+			padding: $padding-big;
+			border-radius: $border-radius-small;
 			border-bottom-left-radius: 0px;
 			h2{
-				padding: 30px 0;
+				padding: $padding-big 0;
 				padding-top: 0px;
 				font-size: $font-link;
 			}
 			a{
 				position: absolute;
-				bottom: 30px;
-				right: 30px;
-				padding: 10px 20px;
-				border-radius: 30px;
+				bottom: $big;
+				right: $big;
+				padding: $padding-small $padding-base;
+				border-radius: $border-radius-small;
 				font-size: $font-navbar;
 				color: $color-white;
 				background-color: $color-accent-light;
 				&:hover{
-					background-color: #ffd15b; transition: box-shadow 0.2s; box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+					background-color: $color-hover-light; transition: box-shadow 0.2s; box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
 				}
 
 			}
@@ -40,7 +40,7 @@
 	&__card-2{
 		text-align: end;
 		position: relative;
-		margin: 40px 0;
+		margin: $margin-large 0;
 		img{
 			width: 50%;
 		}
@@ -51,25 +51,25 @@
 			background-color:$color-white;
 			bottom: 0;
 			left: 0;
-			padding: 30px;
-			border-radius: 30px;
+			padding: $padding-big;
+			border-radius: $border-radius-small;
 			border-bottom-right-radius: 0px;
 			h2{
-				padding: 30px 0;
+				padding: $padding-big 0;
 				padding-top: 0px;
 				font-size: $font-link;
 			}
 			a{
 				position: absolute;
-				bottom: 30px;
-				right: 30px;
-				padding: 10px 20px;
-				border-radius: 30px;
+				bottom: $big;
+				right: $big;
+				padding: $padding-small $padding-base;
+				border-radius: $border-radius-small;
 				font-size: $font-navbar;
 				color: $color-white;
 				background-color: $color-accent-light;
 				&:hover{
-					background-color: #ffd15b; transition: box-shadow 0.2s; box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+					background-color: $color-hover-light; transition: box-shadow 0.2s; box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
 				}
 			}
 		}
