--- a/assets/sass/component/stay/_hotel.scss
+++ b/assets/sass/component/stay/_hotel.scss
@@ -22,17 +22,14 @@
 		&-address{
 		display: inline-block;
 
-			&::before{
-				display: inline-block;
-				content: '';
-				background-image: url(../public/icon/blackicon/location.png);
-				@extend %background-title-icon;
-				width: $icon-small;
-				height: $icon-small;
-			}
+		img{
+			width: $icon-small;
+			height: $icon-small;
+		}
 		}
 		&-phone{
 			display: inline-block;
+			margin-left: $margin-extra-hue;
 			img{
 				width: $icon-small;
 				height: $icon-small;
@@ -40,7 +37,7 @@
 			a{
 				color:$color-accent-dark;
 				&:hover{
-					color:#3DA3FF;
+					color:$color-accent;
 				}
 			}
 		}
@@ -60,12 +57,6 @@
 &__items{
 	position: relative;
 	font-size: $font-navbar;
-
-	img{
-		position: absolute;
-		top:-$margin-large;
-		left: -$margin-large;
-	}
 
 	&-title{
 		position: absolute;
@@ -91,7 +82,7 @@
 	margin: $margin-large 10%;
 	color:$color-gray;
 	&:hover{
-		color:#3DA3FF;
+		color:$color-accent;
 	}
 }
 }
