--- a/assets/sass/layout/_body.scss
+++ b/assets/sass/layout/_body.scss
@@ -4,7 +4,6 @@ body{
 	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.4;
 	letter-spacing: 2px;
-	position: relative;
 }
 
 a{
@@ -12,11 +11,11 @@ a{
 }
 .back-top{
 	position: fixed;
-	bottom: 30px;
-  right: 30px;
-	z-index: 100;
+	bottom: $big;
+  right: $big;
+	z-index: $index-top;
 	img{
-		width: 40px;
+		width: $large;
 	}
 	:hover {
 		animation: swing 1s infinite;
