--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -15,7 +15,9 @@ header {
 		&__title{
 			position: absolute;
 			top:50%;
-			left: 50%;
+			left: 40% ;
+			font-size:$font-big-title;
+			color:$color-white
 		}
 	}
 
@@ -67,7 +69,7 @@ header {
 			width: 29.0625%;
 			transform: scaleX(-1);
 			bottom: -10%;
-			right: -5%;
+			right: 0%;
 		}
 	}
 
