--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -29,10 +29,10 @@
 		}
 
 		a{
-			padding-left: 40px;
+			padding-left: $padding-large;
 			color:$color-accent-dark;
 			&:hover{
-				color:#8FC7F9;
+				color:$color-accent-blue;
 			}
 		}
 
@@ -46,7 +46,7 @@
 			li{
 				text-align: center;
 				border-bottom: 1px solid $color-accent;
-				padding: 20px 0;
+				padding: $padding-base 0;
 
 				&:last-child{
 					border:none
