--- a/assets/sass/mixin/_flex-box.scss
+++ b/assets/sass/mixin/_flex-box.scss
@@ -32,6 +32,10 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
+%flex-end{
+	display: flex;
+	justify-content: flex-end;
+}
 
 %flex-center-end{
 	display: flex;
