--- a/assets/sass/variable/_color.scss
+++ b/assets/sass/variable/_color.scss
@@ -6,6 +6,10 @@ $color-accent-dark:#123C62;
 $color-accent-light:#FFB72A;
 $color-accent-blue:#8FC7F9;
 $color-underline:#B8DDFF;
+$color-hover-blue:#5B7893;
+$color-hover-light:#ffd15b;
+$color-table:#E9EDC9;
+$color-table-active:#C6D16C;
 
 $color-gray:#7C7C7C;
 $color-button-gray:#BEBEBE;
