--- a/assets/sass/layout/_body.scss
+++ b/assets/sass/layout/_body.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
 body{
+	width: 100%;
 	min-height: 100vh;
 	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.4;
